--- a/index.yml
+++ b/index.yml
@@ -1,5 +1,9 @@
 title: Dlang Tour
 start: welcome/welcome-to-d
-repo: dlang-tour/korean
+repo: dlang-tour/english
 ordering:
 - welcome
+- basics
+- gems
+- multithreading
+- vibed
